# IIR-blur-android

./: README.md  build.gradle  demo.apk
app/: CMakeLists.txt  build.gradle
app/jni/: BoxBlur.cpp  CMakeLists.txt  IIRBlur.cpp  IIRBlurNeon.cpp  IIRBlurNeonFp16.cpp
app/release/: output-metadata.json
app/src/main/: AndroidManifest.xml
app/src/main/java/com/opiumfive/iirblurdemo/: GpuBlurBitmap.java  MainActivity.java  Utils.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/raw/: dissolve_f.glsl  dissolve_v.glsl  dust_fragment.glsl  dust_spawn.glsl  dust_vertex  sprite_fragment.glsl  sprite_vertex.glsl
